--- a/main/templates/create_food.html
+++ b/main/templates/create_food.html
@@ -1,4 +1,12 @@
-{% extends 'base.html' %} 
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% block meta %} {% endblock meta %}
+  </head>
+  
 {% block content %}
 <h1>Add New Food</h1>
 
