--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'Derovana';
+  src: url("{% static 'fonts/DerovanaDemoRegular.ttf' %}") format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Now you can apply the font globally or for specific elements */
+body {
+  font-family: 'Derovana', sans-serif;
+}
+
 .form-style form input, form textarea, form select {
     width: 100%;
     padding: 0.5rem;
