--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -43,29 +43,25 @@
   </div>
 
   <div class="px-3 mb-4">
-    <div class="flex items-center py-2 px-4 w-fit mx-auto">
-      <p class="text-[3rem] font-bold text-white">all in one.&nbsp;</p>
-      <p id="tagline" class="text-[3rem] font-normal text-white"></p>  <!-- Tagline text -->
-    </div>
-
     <div class="flex rounded-[15px] items-center bg-[#05e500] py-2 px-4 w-fit mx-auto outline outline-[2px]">
       <h1 class="text-black text-center text-sm">
         <span class="font-bold">Last Login:</span> {{ last_login }}
       </h1>    
     </div>
   </div>
-  
+
+
   <div class="flex justify-end mr-[7rem] mb-6">
-      <a href="{% url 'main:create_product' %}" class="w-auto flex justify-center py-2 px-4 text-sm font-medium rounded-[15px] text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out
-      hover:shadow-[0px_0px_15px_5px_rgba(255,255,255,0.4)]">
-          Add New Product
-      </a>
-      <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="w-auto ml-4 flex justify-center py-2 px-4 text-sm font-medium rounded-[15px] text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out
-      hover:shadow-[0px_0px_15px_5px_rgba(255,255,255,0.4)]" onclick="showModal();">
-          Add New Product by AJAX
-      </button>
+    <a href="{% url 'main:create_product' %}" class="w-auto flex justify-center py-2 px-4 text-sm font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105">
+      Add New Product
+    </a>
+    <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="w-auto ml-4 flex justify-center py-2 px-4 text-sm font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105" onclick="showModal();">
+      Add New Product by AJAX
+    </button>
   </div>
-  
+
+  <img src="{% static 'images/subtitle-explore.png' %}" class="ml-4 mr-4" style="width: 170px; height: auto; object-fit: contain;" alt="Subtitle Explore">
+
   <div id="product_cards"></div>
   <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
     <div id="crudModalContent" class="relative bg-gray-200 rounded-[25px] shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
