--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -42,23 +42,14 @@
     </div>
   </div>
 
-  <div class="px-3 mb-4">
-    <div class="flex rounded-[15px] items-center bg-[#05e500] py-2 px-4 w-fit mx-auto outline outline-[2px]">
-      <h1 class="text-black text-center text-sm">
-        <span class="font-bold">Last Login:</span> {{ last_login }}
-      </h1>    
-    </div>
-  </div>
-
-
-  <div class="flex justify-end mr-[7rem] mb-6">
+  <div class="flex justify-center mb-6">
     <a href="{% url 'main:create_product' %}" class="w-auto flex justify-center py-2 px-4 text-sm font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105">
       Add New Product
     </a>
     <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="w-auto ml-4 flex justify-center py-2 px-4 text-sm font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105" onclick="showModal();">
       Add New Product by AJAX
     </button>
-  </div>
+  </div>  
 
   <img src="{% static 'images/subtitle-explore.png' %}" class="ml-4 mr-4" style="width: 170px; height: auto; object-fit: contain;" alt="Subtitle Explore">
 
@@ -125,6 +116,12 @@
         <button type="submit" id="submitproduct" form="productForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
       </div>
     </div>
+  </div>
+
+  <div class="flex fixed bottom-6 right-6 items-center bg-[#4d2d18] py-2 px-4 w-fit">
+    <h1 class="text-white text-center text-sm">
+      <span class="font-bold">Last Login:</span> {{ last_login }}
+    </h1>    
   </div>
 
 </div>
