style: modified navbar styling

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -15,7 +15,7 @@
 {% endblock meta %}
 {% block content %}
 {% include 'navbar.html' %}
-<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-[#102820] flex flex-col">
+<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-[4.5rem] min-h-screen bg-[#102820] flex flex-col">
 
   <!-- Image Slider -->
   <div class="relative w-full h-[500px] overflow-hidden mb-10">
