--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,13 +3,13 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
-        <img src="{% static '../media/logo.png' %}" alt="Logo" class="h-8" />
+        <img src="{% static '/images/logo-bfq.png' %}" alt="Logo" class="h-8" />
       </div>
       <div class="hidden md:flex items-center">
-        <a class="text-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition duration-300 mr-2">
+        <a class="text-center bg-[#8a6420] hover:bg-[#4d2d18] text-white font-bold py-2 px-4 transition duration-300 mr-4">
           Login
         </a>
-        <a class="text-center bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded transition duration-300">
+        <a class="text-center bg-[#8a6420] hover:bg-[#4d2d18] text-white font-bold py-2 px-4 transition duration-300">
           Register
         </a>
       </div>
