--- a/main/templates/main_admin.html
+++ b/main/templates/main_admin.html
@@ -42,6 +42,15 @@
     </div>
   </div>
 
+  <div class="flex justify-center mb-6">
+    <a href="{% url 'main:create_product' %}" class="w-auto flex justify-center py-2 px-4 text-sm font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105">
+      Add New Product
+    </a>
+    <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="w-auto ml-4 flex justify-center py-2 px-4 text-sm font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105" onclick="showModal();">
+      Add New Product by AJAX
+    </button>
+  </div>  
+
   <img src="{% static 'images/subtitle-explore.png' %}" class="ml-4 mr-4" style="width: 170px; height: auto; object-fit: contain;" alt="Subtitle Explore">
 
   <div id="product_cards"></div>
@@ -280,6 +289,20 @@
               <p id="popupDescription-${item.pk}" class="text-gray-700 mb-4 text-center"></p>
               <p id="popupPrice-${item.pk}" class="text-gray-900 font-semibold text-center mb-6"></p>
 
+              <!-- Edit and Delete Buttons -->
+              <div class="flex justify-center space-x-4 mb-4">
+                <a href="/edit-product/${item.pk}"  class="edit-button bg-white hover:bg-[#c9c9c9] text-black rounded-full p-2 transition duration-300 shadow-md">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
+                      <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                  </svg>
+                </a> 
+                <a href="/delete-product/${item.pk}" class="bg-red-500 hover:bg-red-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+                  </svg>
+                </a>
+              </div>
+
               <!-- Close Button -->
               <button onclick="closePopup('${item.pk}')" class="absolute top-2 right-2 bg-[#8a6420] hover:bg-[#4d2d18] text-white py-1 px-3 font-bold">close</button>
             </div>
@@ -295,7 +318,7 @@
 
   function openPopup(name, quantity, price, restaurant, imageUrl, productId) {
     document.getElementById('popupName-' + productId).innerText = name;
-    // document.getElementById('popupQuantity-' + productId).innerText = 'Quantity: ' + quantity;
+    document.getElementById('popupQuantity-' + productId).innerText = 'Quantity: ' + quantity;
     document.getElementById('popupDescription-' + productId).innerText = restaurant;
     document.getElementById('popupPrice-' + productId).innerText = price + ' IDR';
 
