--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -54,3 +54,50 @@ body {
   transform: translateX(-100%);
   animation: line-walk 2s forwards; /* Adjust the duration as needed */
 }
+
+/* Style dasar untuk link navbar */
+.nav-link {
+  position: relative;
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  color: #ffffff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+/* Efek hover dengan kotak latar belakang */
+.nav-link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #B48125;
+  border-radius: 0.375rem;
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.3s, transform 0.3s;
+  transform: scale(0.9);
+}
+
+.nav-link:hover::before {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.nav-link:hover {
+  color: white; /* Warna teks saat di-hover */
+}
+
+/* Style untuk dropdown item */
+.dropdown-item {
+  display: block;
+  padding: 0.5rem 1rem;
+  color: #4a4a4a;
+  transition: background-color 0.3s;
+}
+
+.dropdown-item:hover {
+  background-color: #f2f2f2;
+}
