feat: added templatetags, and fix the create_product for admin

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -55,7 +55,7 @@
 <style>
   .nav-link {
     color: white;
-    font-weight: bold;
+    font-weight: normal;
     padding: 0.5rem 1rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
